	skipped, checking is aborted if the package dependencies cannot
	be resolved at run time.  Rd files are now also explicitly
	checked for empty \name and \title entries.

    o	The Perl code to build help now removes an existing example
	file if there are no examples in the current help file.

    o	R CMD Rdindex is now deprecated in favor of function Rdindex()
	in package tools.


C-LEVEL FACILITIES

    o	A full double-precision LAPACK shared library is made
	available as -lRlapack.	 To use this include
	$(LAPACK_LIBS) $(BLAS_LIBS) in PKG_LIBS.
	[Not currently operational on MacOS X unless vecLib is used,
	and vecLib and libsunperf give incomplete libraries.]

    o	Header file R_ext/Lapack.h added.  C declarations of BLAS
	routines moved to R_ext/BLAS.h and included in R_ext/Applic.h
	and R_ext/Linpack.h for backward compatibility.

    o	R will automatically call initialization and unload routines, if
	present, in shared libraries/DLLs during dyn.load() and
	dyn.unload() calls. The routines are named R_init_<dll name>
	and R_unload_<dll name>, respectively.	See Writing R
	Extensions Manual for more information.

    o	Routines exported directly from the R executable for use with
	.C(), .Call(), .Fortran() and .External() are now accessed via
	the registration mechanism (optionally) used by packages. The
	ROUTINES file (in src/appl/) and associated scripts to
	generate FFTab.h and FFDecl.h are no longer used.

    o	Entry point Rf_append is no longer in the installed headers
	(but is still available).  It is apparently unused.

    o	Many conflicts between other headers and R's can be avoided by
	defining STRICT_R_HEADERS and/or R_NO_REMAP -- see `Writing R
	Extensions' for details.

    o	New entry point R_GetX11Image and formerly undocumented
	ptr_R_GetX11Image are in new header R_ext/GetX11Image.	These
	are used by package tkrplot.


BUG FIXES

    o	Sys.sleep() on Unix was having trouble with waits of less than 0.5s
