@@ -6,5 +6,6 @@
 \DefineVerbatimEnvironment{Soutput}{Verbatim}{}
 \DefineVerbatimEnvironment{Scode}{Verbatim}{fontshape=sl}
 
+\newenvironment{Schunk}{}{}
 
 
